2008-12-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Give an error message if the user requests any
	unimplemented features documented for 'set datafile binary'.
	Bug #2378535

2008-11-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary) src/graph3d.c (boundary3d)
	docs/gnuplot.doc docs/gnuplot.texi:
	`set {lrbt}margin at screen FRAC` should behave consistently for all
	four plot borders.  Ignore the current value of `set origin`.
	Bug #2345000

2008-11-27  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.c src/gadgets.h src/graph3d.c src/save.c   
	src/set.c src/show.c src/unset.c NEWS:
	The docs say that 'set size ratio' is ignored in 3D;   make it so.
	New option 'set view equal_axes' that forces x and y axes in a 3D plot
	to use the same scale.  This is similar to 'set size square' in 2D.
	Bug #2004205. Feature request #2006851.

	* src/set.c (prune_dataticks): Fix typo causing ticlabel list corruption

2008-11-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): If no information is available about what
	default scalable font might be available we currently give up and fall
	back to a built in non-scalable font.  Now we try font "arial" before
	falling back.  Who knows, it might even be available.

2008-11-13  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/gnuplot.texi: Update section on color selection
	to include "lc variable".

2008-11-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_set_font ENHX11_put_text): Initialize enhanced text
	processing to use the most recently requested font rather than the
	default font.

	* src/set.c (set_tics) src/show.c (show_tics) src/save.c (save_set_all)
	docs/gnuplot.doc:  Allow tics to be set front/back without turning on
	the whole grid.    Syntax:   set tics {front|back}

2008-10-30  Ethan Merritt  <merritt@u.washington.edu>
