@@ -1,3 +1,9 @@
+2008-12-07  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (do_key_sample do_rectangle): Fill style EMPTY
+	should be no fill at all, rather than fill with background.
+	Bug #2345832
+	
 2008-12-04  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c:  Give an error message if the user requests any
